restructure components, add basic css styling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,61 @@
 div, button {
   margin: 10px;
 }
+
+body, html, #root {
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
+}
+
+.App {
+  height: 100%;
+  background-color: #ffffff;
+  background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
+  color: white;
+}
+
+.MainBox {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  max-width: 100%;
+  max-height: 100%;
+  overflow: auto;
+  height: 400px;
+  width: 600px;
+  background: #666;
+}
+
+li.tracklistitem {
+    margin-top: 10px;
+    list-style-type: none;
+    cursor: pointer;
+    background: #484848;
+    color: white;
+    padding: 8px;
+}
+
+span.itemtrackartist {
+    float: right;
+}
+
+audio {
+    margin: auto;
+    display: flex;
+}
+
+ul.list-group {
+    margin-top: 30px;
+    padding: 0;
+}
+
+.quizanswer {
+    padding: 100px;
+    margin: auto;
+    width: 150px;
+    text-align: center;
+}
