--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,7 @@ body, html, #root {
     height: 400px;
     width: 600px;
     background: #666;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 li.tracklistitem {
